Added images and started bibliography

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -1,4 +1,25 @@
-@misc{ patashnik-bibtexing,
-       author = "Oren Patashnik",
-       title = "BIBTEXing",
-       year = "1988" }
+@misc{patashnik-bibtexing,
+  author = {Oren Patashnik},
+  title  = {BIBTEXing},
+  year   = {1988}
+}
+@misc{introduction-nn,
+  author = {Scott Robinson},
+  title  = {https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/},
+  year   = {2021}
+}
+@misc{cnn,
+  author = {Sumit Saha},
+  title  = {https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53},
+  year   = {2021}
+}
+@misc{convolution,
+  author = {Md Nasir Uddin Laskar},
+  title  = {https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/},
+  year   = {2021}
+}
+@misc{unet,
+  author = {unet},
+  title  = {https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47},
+  year   = {2021}
+}
