--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -19,7 +19,13 @@
   year   = {2021}
 }
 @misc{unet,
-  author = {unet},
+  author = {Harshall Lamba},
   title  = {https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47},
   year   = {2021}
+}
+@book{handsonmachinelearning,
+  author    = {Aurélien Géron},
+  title     = {Hands-On Machine Learning with Scikit-Learn and TensorFlow},
+  publisher = {O'Reilly Media},
+  year      = {2018}
 }
